// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot renders with DONE button if hideDoneButton is not defined 1`] = `
<div
  className=""
>
  <div />
  <WithStyles(EditorAndPad)
    classNames={Object {}}
    controlledKeypad={true}
    showKeypad={true}
  />
  <WithStyles(RawDoneButton)
    hideBackground={false}
  />
</div>
`;

exports[`snapshot renders without DONE button if hideDoneButton value is true 1`] = `
<div
  className=""
>
  <div />
  <WithStyles(EditorAndPad)
    classNames={Object {}}
    controlledKeypad={true}
    showKeypad={true}
  />
</div>
`;
